hphp/test/zend/bad/ext-spl/SplFileObject_haschildren_error001.php
<?php
$s = new SplFileObject( __FILE__ );
$s->hasChildren('string');

?>